# parallel

./: .gitignore  CMakeLists.txt  README  Диаграмма без названия.drawio
.devcontainer/: devcontainer.json
matrix/: CMakeLists.txt  main.cpp  matrix-helper.hpp  Диаграмма без названия.drawio
mpi-test/: CMakeLists.txt  main.cpp
producer-consumer/: CMakeLists.txt  conf.json
producer-consumer/src/: loop.hpp  messages.hpp  queue.hpp  session.hpp  settings.hpp  shared_memory.hpp
race/: CMakeLists.txt
race-mpi/: CMakeLists.txt  main.cpp
race/src/: car.hpp  main.cpp  race.hpp
